# VeryHipEvents

./: CMakeLists.txt  README.md
include/VeryHipEvents/: Event.h  EventRecorder.h
src/: Event.cpp  EventRecorder.cpp
test/: test.cpp
